<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result"
    android:background="@mipmap/result_fondo"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_marginBottom="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"/>

    <ImageView
        android:id="@+id/ivResult"
        android:layout_marginTop="16dp"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="32dp"
        android:src="@mipmap/alto" />

    <TextView
        android:id="@+id/tvResultDesc"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result_desc"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_marginVertical="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/tvScore"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntaje"
        android:textColor="@color/white"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/bFinish"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_purple_ripple"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:padding="4dp"/>
</LinearLayout>