<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@mipmap/fondo_inicio">

    <ImageView
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_space_app_white"/>
    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_square"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@android:color/primary_text_light"
            android:textSize="28sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/etName"
            android:backgroundTint="#3383A5"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hint_name"
            android:textColor="@android:color/secondary_text_light"
            android:textCursorDrawable="@null"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/bStart"
            android:background="@drawable/button_purple_ripple"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>