<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Challenge"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/pregunta"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/pregunta1"
        android:textSize="28sp"
        android:textColor="@android:color/black"/>
    <ImageView
        android:id="@+id/ivPregunta"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@mipmap/earth"/>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/pbNumeroPregunta"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="12"
            android:progressTint="#3383A5"
            android:secondaryProgressTint="#82CAE9"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvNumeroPregunta"
            android:layout_marginHorizontal="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bOpcion1"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:elevation="10dp">
        <TextView
            android:id="@+id/tvOpcion1"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/opcion1_1"
            android:textColor="@color/gray"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/bOpcion2"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:elevation="10dp">
        <TextView
            android:id="@+id/tvOpcion2"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/opcion1_2"
            android:textColor="@color/gray"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/bOpcion3"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:elevation="10dp">
        <TextView
            android:id="@+id/tvOpcion3"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/opcion1_3"
            android:textColor="@color/gray"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/bOpcion4"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:elevation="10dp">
        <TextView
            android:id="@+id/tvOpcion4"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/opcion1_4"
            android:textColor="@color/gray"/>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/bSubmit"
        android:background="@drawable/button_purple_ripple"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@android:color/white"/>
</LinearLayout>