<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ocean_blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Menu">

    <LinearLayout
        android:id="@+id/bOurOcean"
        android:elevation="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_corner_square_menu"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ocean_icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/understanding"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_ocean"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bChallenge"
        android:elevation="1dp"
        android:background="@drawable/rounded_corner_square_menu"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_margin="8dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/challenge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bExit"
        android:elevation="1dp"
        android:background="@drawable/rounded_corner_square_menu"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_margin="8dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/exit" />
        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginHorizontal="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>